--- a/dexter/src/main/AndroidManifest.xml
+++ b/dexter/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <activity
         android:name=".DexterActivity"
         android:theme="@style/Dexter.Internal.Theme.Transparent"
+        android:exported="true"
         />
   </application>
 
